--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,10 @@
 <resources>
-    <string name="app_name">Distancia De Parada</string>
+    <string name="app_name">DISTANCIA DE PARADA</string>
     <string name="titulo">DISTANCIA DE PARADA</string>
+    <string name="titulo2">A NIVEL Y/O MOJADO</string>
+    <string name="titulo3">GRAVA Y ASFALTO</string>
+    <string name="chck_asf">Terreno Asfalto</string>
+    <string name="chck_grav">Terreno Grava</string>
     <string name="action_settings">Settings</string>
     <string name="ingresar">Ingresar Datos Libremente </string>
     <string name="seleccionar">Seleccionar Datos</string>
@@ -8,6 +12,9 @@
     <string name="title_activity_seleccionar">Seleccionar</string>
     <string name="ing_velocidad">Ingrese la velocidad</string>
     <string name="title_activity_ingresar"> Ingresar</string>
+    <string name="chck_Velocidad_Proyecto">Velocidad de proyecto</string>
+    <string name="chck_Velocidad_Vehiculo">Velocidad de vehiculo</string>
 
     <string name="hello_world">Hello world!</string>
+    <string name="title_activity_seleccionar_grava_asfalto">SeleccionarGravaAsfalto</string>
 </resources>
