--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,7 @@
     <string name="chck_grav">Terreno Grava</string>
     <string name="action_settings">Settings</string>
     <string name="ingresar">Ingresar Datos Libremente </string>
+    <string name="resultado"> La distancia de parada es:  </string>
     <string name="seleccionar">Seleccionar Datos</string>
     <string name="calcular">Calcular Distancia</string>
     <string name="title_activity_seleccionar">Seleccionar</string>
@@ -14,7 +15,5 @@
     <string name="title_activity_ingresar"> Ingresar</string>
     <string name="chck_Velocidad_Proyecto">Velocidad de proyecto</string>
     <string name="chck_Velocidad_Vehiculo">Velocidad de vehiculo</string>
-
-    <string name="hello_world">Hello world!</string>
-    <string name="title_activity_seleccionar_grava_asfalto">SeleccionarGravaAsfalto</string>
+    <string name="title_activity_resultado_d">ResultadoD</string>
 </resources>
